tests/ui/reachable/expr_if.stderr
error: unreachable block in `if` or `while` expression
  --> $DIR/expr_if.rs:7:17
   |
LL |       if {return} {
   |  _________------__^
   | |         |
   | |         any code following this expression is unreachable
LL | |         println!("Hello, world!");
LL | |     }
   | |_____^ unreachable block in `if` or `while` expression
   |
note: the lint level is defined here
  --> $DIR/expr_if.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: unreachable statement
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: in this expansion of `println!`
  ::: $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: unreachable statement
   |
  ::: $DIR/expr_if.rs:21:9
   |
LL |           return;
   |           ------ any code following this expression is unreachable
...
LL |       println!("But I am.");
   |       --------------------- in this macro invocation

error: aborting due to 2 previous errors

